[package]
name = "sym"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
anyhow = '1'
bstr = "0.2"
aho-corasick = "0.7"
object = "0.25"
memmap = "0.7"
rustc-demangle = "0.1"
