[package]
name = "sym"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
anyhow = '1'
bstr = "1"
aho-corasick = "1"
object = "0.32"
memmap2 = "0.9"
rustc-demangle = "0.1"

# explorer
rustyline = "12"
capstone = "0.11"
indexmap = "2"
rayon = "1"
smallvec = { version = "1", features = [ "write" ] }
